--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tungv/react-phone-number-input": "^3.4.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
+    "sass": "^1.65.1",
+    "swiper": "^10.1.0",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
