--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-intersection-observer": "^9.5.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "react-tabs": "^6.0.2",
     "sass": "^1.65.1",
     "swiper": "^10.1.0",
